# agile-development-project

./: .gitignore  Makefile  README.md  database.db  requirements.txt  setup.cfg
app/: app.py  database.py
db/: __init__.py  foods.csv  foods_orders.csv  orders.csv  organizations.csv  restaurants.csv  schema.sql
tests/: __init__.py  app_test.py  auth_test.py  base_test.py  login_test.py  signup_test.py  view_test.py  views_test.py
website/: __init__.py  auth.py  config.py  database.py  db_init.py  main.py  models.py  sqlite.db  views.py
website.egg-info/: PKG-INFO  SOURCES.txt
website/static/: .circular.png.icloud  .col.png.icloud  .dine.jpg.icloud  .logo-icon.png.icloud  .logo300.png.icloud  .sdg.png.icloud  .user2.png.icloud  .yummy150.png.icloud  about.css  backgroundcolor.css  blog.css  index.js  insight_chart.js  main.css  npo.js
website/templates/: about.html  base.html  blog.html  dashboard.html  insight.html  login.html  npo.html  register.html  restaurant.html  signup.html  test.html
website/templates/images/: .logo-text.png.icloud
