[metadata]
name = AGILE_DEVELOPMENT_PROJECT

[options]
package_dir = website
packages = find:
test_suite = tests

[options.packages.find]
where = website

# https://flake8.pycqa.org/en/latest/user/configuration.html
[flake8]
max-line-length = 120

# http://mypy.readthedocs.io/en/latest/config_file.html
[mypy]
warn_unused_configs = True
disallow_untyped_defs = True
strict_optional = True
warn_redundant_casts = True
warn_return_any = True

# http://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
source = website


# https://radon.readthedocs.io/en/latest/commandline.html
[radon]
cc_max = 10